2007-05-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libmisc/Makefile.am, libmisc/monitor/mon-object.c,
	libmisc/monitor/monitor.h, sapi/include/confdefs.h,
	sapi/include/rtems/config.h, sapi/include/rtems/io.h,
	sapi/src/exinit.c, sapi/src/io.c: Eliminate maximum_drivers
	configuration parameter since it was used to configure a no longer
	used feature. Device names are now part of the filesystem not in a
	table. This also eliminated the variables _IO_Number_of_devices and
	_IO_Driver_name_table from RTEMS as well as the memory allocation
	used to populate _IO_Driver_name_table.
	* libmisc/monitor/mon-dname.c: Removed.

2007-05-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sapi/include/confdefs.h: Add CONFIGURE_MESSAGE_BUFFER_MEMORY so there
	is less dependence on CONFIGURE_MEMORY_OVERHEAD. Do not arbitrarily
	add 1 to CONFIGURE_MEMORY_OVERHEAD so we do not waste a kilobyte for
	unused Workspace. Round the workspace required size to an 8 byte
	boundary instead of a 0x400 byte one. We may end up needing to add 8
	bytes again to account for the alignment rounding.

2007-05-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	Yu Chen <chyyuu@gmail.com>
	* score/src/corespinlockwait.c: Per question posted as
	http://www.rtems.org/ml/rtems-users/2007/may/msg00180.html, changed
	logical operator to <=.

2007-05-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/cpu/arm/cpu.c, score/cpu/avr/cpu.c, score/cpu/bfin/cpu.c,
	score/cpu/c4x/cpu.c, score/cpu/h8300/cpu.c, score/cpu/i386/cpu.c,
	score/cpu/m68k/cpu.c, score/cpu/mips/cpu.c, score/cpu/nios2/cpu.c,
	score/cpu/no_cpu/cpu.c, score/cpu/sh/cpu.c, score/cpu/sparc/cpu.c,
	cpukit/sapi/src/exinit.c: Move copying of CPU Table to shared
	executive initialization.

2007-05-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/corerwlockrelease.c: Do not dereference NULL.

2007-05-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/Makefile.am, rtems/include/rtems/rtems/barrier.h,